Fixed spacings

--- a/style.sass
+++ b/style.sass
@@ -32,6 +32,9 @@ h2
 .mt-7
     margin-top: 5rem;
 
+.mt-8
+    margin-top: 10rem;
+
 .mb-7
     margin-bottom: 5rem;
 
